<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="24dp"
    tools:context=".OnBoardingActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lt_finance"
        android:textColor="@color/orange"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:layout_marginTop="120dp"/>

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_mortgage_platform_nof_the_future"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_below="@id/tvTitle"
        android:layout_alignStart="@id/tvTitle"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lt_finance_helps_you_calculate_nand_apply_for_mortgages_in_nover_100_banks"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_below="@id/tvWelcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnGetStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:backgroundTint="@color/orange"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>