<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="24dp"
    tools:context=".CostActivity">

    <ImageView
        android:id="@+id/imageChart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="80dp"
        android:layout_alignParentTop="true"
        android:scaleType="fitCenter"
        android:src="@drawable/investing" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/easy_to_visualize_nmonthly_costs"
        android:textColor="@color/orange"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_below="@id/imageChart"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_hidden_cost_no_hidden_fees_all_the_data_is_easy_clear_and_to_the_point"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_below="@id/titleText"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:backgroundTint="@color/orange"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp" />

</RelativeLayout>