<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ReceiveMoneyActivity">

    <ImageView
        android:id="@+id/imageIllustration"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="80dp"
        android:layout_alignParentTop="true"
        android:scaleType="fitCenter"
        android:src="@drawable/transfer_money" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instantly_receive_nmoney"
        android:textColor="@color/orange"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_below="@id/imageIllustration"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply_to_over_100_banks_and_after_a_nfew_minutes_you_will_receive_the_money_nto_your_bank_account"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_below="@id/titleText"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:backgroundTint="@color/orange"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp" />

</RelativeLayout>